[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/game_over/GameOver.gd" type="Script" id=1]
[ext_resource path="res://scenes/game_over/buttons/ExitButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/vt323.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/game_over/buttons/PlayAgainButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 170
font_data = ExtResource( 3 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="TopRow" type="HBoxContainer" parent="Menu"]
margin_right = 1680.0
margin_bottom = 304.0
size_flags_vertical = 3

[node name="Labels" type="VBoxContainer" parent="Menu/TopRow"]
margin_right = 1680.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameOver" type="Label" parent="Menu/TopRow/Labels"]
margin_right = 1680.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER :("
align = 1
uppercase = true

[node name="TopRow2" type="HBoxContainer" parent="Menu"]
margin_top = 308.0
margin_right = 1680.0
margin_bottom = 612.0
size_flags_vertical = 3

[node name="Labels" type="VBoxContainer" parent="Menu/TopRow2"]
margin_right = 1680.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Score" type="Label" parent="Menu/TopRow2/Labels"]
unique_name_in_owner = true
margin_right = 1680.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
uppercase = true

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 616.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1680.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="PlayAgainButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_top = 72.0
margin_bottom = 142.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 162.0
margin_bottom = 232.0

[connection signal="pressed" from="Menu/CenterRow/Buttons/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
